testsuite/bsc.evaluator/fileIO/IsWritableAfterClose.bsv.bsc-vcomp-out.expected
checking package dependencies
compiling IsWritableAfterClose.bsv
code generation for sysIsWritableAfterClose starts
Error: "Prelude.bs", line 3857, column 41: (S0085)
  Failure during a file handle operation:
    illegal operation
  During elaboration of `res' at "Prelude.bs", line 3857, column 34.
  During elaboration of `b' at "IsWritableAfterClose.bsv", line 13, column 4.
  During elaboration of `sysIsWritableAfterClose' at
  "IsWritableAfterClose.bsv", line 2, column 8.
